--- a/index.html
+++ b/index.html
@@ -184,19 +184,15 @@
 <script>
   var fireballSize = 22;
 
-  function getFireballSpeed (isWindFromLeft) {
-    if (isWindFromLeft) {
-      return 5;
-    }
-
-    return 2;
-  }
-
   var wizardSpeed = 3;
 
   var wizardWidth = 70;
 
-  function getWizardHeight () {
+  function getFireballSpeed (isWindFromLeft) {
+    return isWindFromLeft ? 5 : 2;
+  }
+
+  function getWizardHeight (wizardWidth) {
     return 1.337 * wizardWidth;
   }
 
