--- a/index.html
+++ b/index.html
@@ -205,8 +205,11 @@
     return gameFieldHeight / 3;
   }
 </script>
+<script src="js/open-close-popup.js"></script>
+<script src="js/similar-wizards.js"></script>
+<script src="js/colorize-wizard.js"></script>
 <script src="js/stat.js"></script>
-<script src="js/setup.js"></script>
+<script src="js/dialog.js"></script>
 <script src="js/game.js"></script>
 
 </body>
