--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
   }
 </script>
 <script src="js/open-close-popup.js"></script>
+<script src="js/backend.js"></script>
 <script src="js/similar-wizards.js"></script>
 <script src="js/colorize-wizard.js"></script>
 <script src="js/stat.js"></script>
